--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "futsal-app",
-  "version": "1.0.0",
-  "description": "futsal app ",
-  "main": "app.js",
-  "repository": "git@github.com:prashantparajuli/futsal-app.git",
-  "author": "<prashanta.parajuli@macpokhara.edu.np>",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.8",
-    "nodemon": "^2.0.16"
-  }
+    "name": "futsal-app",
+    "version": "1.0.0",
+    "description": "futsal app ",
+    "main": "app.js",
+    "repository": "git@github.com:prashantparajuli/futsal-app.git",
+    "author": "<prashanta.parajuli@macpokhara.edu.np>",
+    "license": "MIT",
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "mongoose": "^6.3.8",
+        "nodemon": "^2.0.16"
+    }
 }
