--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.3.8",
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.16",
+        "passport": "^0.6.0"
     }
 }
